# ecommerce-fazoo

./: .gitignore
customer_dashboard/backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  combos_data.json  manage.py  pyproject.toml
customer_dashboard/backend/apps/authentication/: admin.py  apps.py  backends.py  models.py  serializers.py  services.py  urls.py  views.py
customer_dashboard/backend/apps/brands/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
customer_dashboard/backend/apps/cart/: admin.py  models.py  serializers.py  urls.py  views.py
customer_dashboard/backend/apps/categories/: __init__.py  admin.py  models.py  serializers.py  views.py
customer_dashboard/backend/apps/checkout/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
customer_dashboard/backend/apps/combos/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
customer_dashboard/backend/apps/common/: dashboard_urls.py  dashboard_views.py  exceptions.py  managers.py  middleware.py  mixins.py  pagination.py  permissions.py  reports_services.py  reports_urls.py  reports_views.py  responses.py  serializers.py  urls.py  utils.py  validators.py  views.py  viewsets.py
customer_dashboard/backend/apps/dealer/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  (+1 more)
customer_dashboard/backend/config/: asgi.py  urls.py  wsgi.py
customer_dashboard/backend/requirements/: base.txt  development.txt  production.txt
customer_dashboard/backend/scratch/: create_temp_cms.py  simulate_filter.py
(+332 files in other folders)
