# ============================================================
# FAAZO Backend – Project Configuration
# ============================================================

[project]
name = "faazo-backend"
version = "1.0.0"
description = "FAAZO Dental Solutions – Production Backend API"
requires-python = ">=3.12"

# ============================================================
# Black – Code Formatter
# ============================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# ============================================================
# isort – Import Sorting
# ============================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = ["django", "rest_framework"]
known_third_party = [
    "corsheaders",
    "django_filters",
    "drf_spectacular",
    "environ",
]
known_first_party = ["apps", "config"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_glob = ["*/migrations/*"]
